# revolt-rs

./: Cargo.toml  LICENSE.md  README.md
crates/revolt-rs/: Cargo.toml
crates/revolt-rs-gateway/: Cargo.toml
crates/revolt-rs-gateway/src/: lib.rs
crates/revolt-rs-http/: Cargo.toml
crates/revolt-rs-http/src/: error.rs  lib.rs
crates/revolt-rs-http/src/client/: builder.rs  mod.rs
crates/revolt-rs-http/src/requests/: mod.rs
crates/revolt-rs-http/src/requests/channel/: get_channel.rs  mod.rs
crates/revolt-rs-http/src/requests/channel/message/: create_message.rs  delete_message.rs  edit_message.rs  get_message.rs  mod.rs
crates/revolt-rs-http/src/requests/user/: current_user.rs  mod.rs  user.rs
crates/revolt-rs-model/: Cargo.toml
crates/revolt-rs-model/src/: attachment.rs  bot.rs  core.rs  errors.rs  gateway.rs  id.rs  image.rs  lib.rs  server.rs  user.rs  video.rs
crates/revolt-rs-model/src/channel/: category.rs  channel.rs  channel_type.rs  icon.rs  mod.rs
crates/revolt-rs-model/src/channel/message/: data.rs  interactions.rs  masquerade.rs  mod.rs  reply.rs  system_message.rs
crates/revolt-rs-model/src/channel/message/embed/: media.rs  mod.rs  provider.rs  special.rs  video.rs
crates/revolt-rs-model/src/channel/webhook/: mod.rs
crates/revolt-rs-model/src/gateway/: config.rs  interactions.rs  mod.rs
crates/revolt-rs-model/src/gateway/incoming/: authenticated.rs  channel_ack.rs  channel_create.rs  channel_delete.rs  channel_start_typing.rs  channel_stop_typing.rs  emoji_create.rs  emoji_delete.rs  message.rs  message_append.rs  message_delete.rs  message_unreact.rs  message_update.rs  mod.rs  pong.rs  ready.rs  server_create.rs  server_delete.rs  server_member_join.rs  server_member_leave.rs  server_member_update.rs  server_role_delete.rs  server_role_update.rs  server_update.rs  user_relationship.rs  user_update.rs
crates/revolt-rs-model/src/gateway/outgoing/: begin_typing.rs  end_typing.rs  mod.rs  ping.rs
crates/revolt-rs-model/src/server/: banner.rs  bans.rs  emoji.rs  icon.rs  member.rs  mod.rs  permissions.rs  role.rs  system_messages.rs
crates/revolt-rs/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: lib.rs
src/gateway/: ws_client.rs
src/models/: attachment.rs  mod.rs  server.rs  user.rs
