[package]
name = "revolt-rs"
version = "0.0.1"
edition = "2021"
description = "An API wrapper for Revolt, built in Rust."
documentation = "https://docs.rs/revolt-rs"
keywords = ["revolt", "api", "revoltrs", "revolt-rs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/revolt-rs/revolt-rs"

# [workspace]
# members = [
# "http",
# "models",
# "examples/*"
# ]

[dependencies]
# https
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.11.18", features = ["json", "native-tls"] }
rand = "0.8.5"

# serde
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.16.0", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }

# async
tokio = "1.28.2"
tokio-websockets = { version = "0.3.2", default-features = false, features = ["client", "getrandom", "simd", "rustls-webpki-roots"] }
async-trait = "0.1.68"

# other
log = "0.4.19"
tracing = "0.1.37"
