[package]
name = "revolt-rs-gateway"
version = "0.0.1"
edition = "2021"
description = "An API wrapper for Revolt, built in Rust."
documentation = "https://docs.rs/revolt-rs"
keywords = ["revolt", "api", "revoltrs", "revolt-rs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/revolt-rs/revolt-rs"

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rmp-serde = { version = "1.1.1" }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
tokio = { version = "1.28.2", default-features = false, features = ["net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.19.0", default-features = false, features = ["connect"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes"] }
revolt-rs-http = { version = "0.0.1", path = "../revolt-rs-http" }