[package]
name = "revolt-rs-http"
version = "0.0.1"
edition = "2021"
description = "Revolt REST API client, for revolt-rs."
documentation = "https://docs.rs/revolt-rs"
keywords = ["revolt", "api", "revoltrs", "revolt-rs"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/revolt-rs/revolt-rs"

[dependencies]
# hyper = { version = "0.14.26", default-features = false, features = ["client", "http1", "http2", "runtime"] }
# hyper-rustls = { version = "0.24.0", default-features = false, features = ["http1", "http2", "native-tokio"] }
reqwest = { version = "0.11.9", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
tokio = { version = "1.28.2", default-features = false, features = ["sync", "time"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes"] }
thiserror = "1.0.40"
async-trait = "0.1.68"
async-recursion = "1.0.4"

revolt-rs-model = { default-features = false, path = "../revolt-rs-model", version = "0.0.1" }

[dev-dependencies]
static_assertions = { version = "1.1.0", default-features = false }
