[package]
name = "revolt-rs-model"
version = "0.0.1"
edition = "2021"
description = "Revolt API models, for revolt-rs."
documentation = "https://docs.rs/revolt-rs"
keywords = ["revolt", "api", "revoltrs", "revolt-rs"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/revolt-rs/revolt-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
non-empty-string = { version = "0.2.3", features = ["serde"] }
