[package]
name = "revolt-rs"
version = "0.0.1"
edition = "2021"
description = "An API wrapper for Revolt, built in Rust."
documentation = "https://docs.rs/revolt-rs"
keywords = ["revolt", "api", "revoltrs", "revolt-rs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/revolt-rs/revolt-rs"

[dependencies]
revolt-rs-gateway = { path = "../revolt-rs-gateway", version = "0.0.1" }
revolt-rs-http = { path = "../revolt-rs-http", version = "0.0.1" }
revolt-rs-model = { path = "../revolt-rs-model", version = "0.0.1" }