[package]
name = "basic"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { default-features = false, features = ["macros", "signal", "rt-multi-thread"], version = "1.0" }
futures-util = { default-features = false, version = "0.3" }
revolt-rs = { path = "../../crates/revolt-rs" }
